# zarinpal

./: Cargo.toml  README.md
src/: error.rs  extensions.rs  lib.rs  prelude.rs
src/methods/: mod.rs  request.rs  unverified.rs  verify.rs
src/results/: __private.rs  mod.rs  request.rs  result_code.rs  unverified.rs  verify.rs
test-bin/: Cargo.toml
test-bin/src/: main.rs
