[workspace]
members = [".", "test-bin"]

[package]
name = "zarinpal"
version = "0.1.1"
edition = "2021"
authors = ["immmdreza"]
license-file = "LICENSE"
description = "Zarinpal Payment Gateway Api."
repository = "https://github.com/immmdreza/zarinpal"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.4", features = ["v4"] }
thiserror = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = { version = "1.0" }
tokio = { version = "1.32", features = ["rt-multi-thread", "macros"] }
typed-builder = { version = "0.16" }
async-trait = { version = "0.1" }
